# PhotoWall

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
docs/: ENVIRONMENT_SETUP_QT.md  MIGRATION_PLAN_QT.md  MIGRATION_TASKS_QT.md  PROJECT_HANDOVER (1).md  thumbnail-loading-scheme.md
photowall-qt/: CMakeLists.txt
photowall-qt/include/: photowall.h
photowall-qt/qml/: main.qml
photowall-qt/qml/components/: ContentShelf.qml  ContextMenu.qml  FolderTreeItem.qml  GridBackground.qml  HeroSection.qml  Icon.qml  PhotoGrid.qml  PhotoThumbnail.qml  SearchPanel.qml  Sidebar.qml  TagRibbon.qml  ThemedScrollBar.qml  Toolbar.qml  WindowControls.qml  qmldir
photowall-qt/qml/dialogs/: AlbumManager.qml  ConfirmDialog.qml  PhotoViewer.qml  ScanProgressDialog.qml  TagManager.qml
photowall-qt/qml/pages/: AlbumsPage.qml  FavoritesPage.qml  FoldersPage.qml  HomePage.qml  SettingsPage.qml  TagsPage.qml  TrashPage.qml
photowall-qt/qml/theme/: Theme.qml  qmldir
photowall-qt/resources/: resources.qrc
photowall-qt/src/: main.cpp
photowall-qt/src/core/: EventDispatcher.cpp  EventDispatcher.h  FolderTreeModel.cpp  FolderTreeModel.h  PhotoModel.cpp  PhotoModel.h  PhotoStore.cpp  PhotoStore.h  RustBridge.cpp  RustBridge.h  ThumbnailProvider.cpp  ThumbnailProvider.h
photowall-qt/src/utils/: JsonHelper.cpp  JsonHelper.h
photowall-qt/tests/: CMakeLists.txt
photowall-qt/tests/common/: TestConfig.h  TestDataGenerator.h  TestUtils.cpp  TestUtils.h
photowall-qt/tests/e2e/: tst_BrowsingWorkflow.cpp  tst_FullWorkflow.cpp  tst_IndexingWorkflow.cpp  tst_SearchWorkflow.cpp  tst_TagsWorkflow.cpp  tst_TrashWorkflow.cpp
photowall-qt/tests/mocks/: MockFFI.cpp  MockFFI.h  MockPhotoDatabase.cpp  MockPhotoDatabase.h
public/: splash.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/photowall-core/: Cargo.toml
src-tauri/crates/photowall-core/src/: events.rs  jobs.rs  lib.rs  paths.rs
src-tauri/crates/photowall-core/src/db/: connection.rs  mod.rs  photo_dao.rs  scan_dir_dao.rs
src-tauri/crates/photowall-core/src/models/: album.rs  mod.rs  photo.rs
src-tauri/crates/photowall-core/src/services/: auto_scan.rs  editor.rs  indexer.rs  libraw.rs  metadata.rs  mod.rs  native_editor.rs  settings.rs  thumbnail_queue.rs
src-tauri/crates/photowall-core/src/utils/: error.rs  mod.rs  sanitize.rs
src-tauri/crates/photowall-ffi/: Cargo.toml
src-tauri/crates/photowall-ffi/include/: photowall.h
src-tauri/crates/photowall-ffi/src/: albums.rs  callbacks.rs  error.rs  folders.rs  handle.rs  indexer.rs  jobs.rs  lib.rs  photo_ops.rs  photos.rs  settings.rs  tags.rs  thumbnail.rs  trash.rs
src-tauri/native/: CMakeLists.txt  build.bat  editor.cpp  editor.h  photowall_editor.sln  photowall_editor.vcxproj
src-tauri/resources/libraw/: LICENSE.LibRaw.txt  README.md
src-tauri/src/: adapters.rs  lib.rs  main.rs  window_effects.rs
src-tauri/src/commands/: albums.rs  auto_scan.rs  edit.rs  file_ops.rs  folder_sync.rs  folders.rs  greet.rs  logging.rs  mod.rs  ocr.rs  scanner.rs  search.rs  settings.rs  smart_albums.rs  tags.rs  thumbnail.rs  window_effects.rs
src-tauri/src/db/: album_dao.rs  connection.rs  mod.rs  photo_dao.rs  schema.rs  smart_album_dao.rs  tag_dao.rs
src-tauri/src/models/: album.rs  mod.rs  photo.rs  settings.rs  tag.rs
src-tauri/src/services/: auto_scan.rs  colorspace.rs  hasher.rs  indexer.rs  libraw.rs  mod.rs  ocr.rs  query_parser.rs  scanner.rs  settings.rs  thumbnail.rs  thumbnail_queue.rs  watcher.rs  wic.rs
src-tauri/src/utils/: error.rs  mod.rs  sanitize.rs
src-tauri/target-codex-check/: .rustc_info.json
src/components/: ErrorBoundary.tsx  FrontendReady.tsx
src/components/album/: AlbumGrid.tsx  AlbumManager.tsx  index.ts
src/components/common/: ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.tsx  FeaturePlaceholder.tsx  Icon.test.tsx  Icon.tsx  ImportFab.tsx  ScanProgressDialog.tsx  SelectionToolbar.tsx
src/components/dashboard/: ContentShelf.tsx  HeroSection.tsx  TagRibbon.tsx
src/components/layout/: AppHeader.tsx  BlurredBackground.tsx  Layout.tsx  StatusBar.tsx  Toolbar.tsx  WindowControls.tsx  index.ts
src/components/photo/: FolderTree.tsx  PhotoDetail.tsx  PhotoEditor.tsx  PhotoGrid.test.tsx  PhotoGrid.tsx  PhotoThumbnail.tsx  PhotoViewer.tsx  Thumbnail.tsx  TimelineView.test.tsx  TimelineView.tsx  index.ts
src/components/photo/PhotoGrid/: index.tsx  types.ts
src/components/photo/PhotoGrid/components/: DateGroupSection.tsx  EmptyState.tsx  GridFooter.tsx  GridRow.tsx  GridScroller.tsx
src/components/photo/PhotoGrid/hooks/: useGridLayout.ts  useScrollSync.ts  useThumbnailPrefetch.ts
src/components/photo/PhotoGrid/utils/: scrollbarMode.ts
src/components/search/: SearchPanel.tsx  SearchSuggestions.tsx
src/components/sidebar/: Sidebar.tsx
src/components/tag/: BatchTagSelector.tsx  TagManager.tsx  TagSelector.tsx  index.ts
src/hooks/: index.ts  useAutoScanEvents.ts  useDebounce.ts  useScanner.ts  useTheme.test.ts  useTheme.ts  useThemeColor.ts  useThumbnail.ts
src/pages/: AlbumsPage.tsx  FavoritesPage.tsx  FoldersPage.tsx  HomePage.tsx  SettingsPage.tsx  TagsPage.tsx  TrashPage.tsx  index.ts
src/services/: ThumbnailRequestManager.test.ts  ThumbnailRequestManager.ts  ThumbnailStore.ts  api.ts  logger.ts
src/services/api/: albums.ts  blur.ts  editor.ts  fileOps.ts  folders.ts  index.ts  ocr.ts  photos.ts  scanner.ts  settings.ts  smartAlbums.ts  sync.ts  tags.ts  trash.ts  types.ts  utils.ts
src/stores/: editStore.ts  folderStore.ts  index.ts  navigationStore.ts  photoStore.ts  searchStore.ts  selectionStore.ts  settingsStore.ts
src/test/: dateGrouping.test.ts  photoStore.test.ts  selectionStore.test.ts  setup.ts  useTheme.test.ts
src/types/: api.ts  index.ts
src/utils/: dateGrouping.ts
