[package]
name = "photowall-ffi"
version = "0.1.0"
edition = "2021"
description = "C ABI interface for PhotoWall core library"
authors = ["PhotoWall Team"]

[lib]
name = "photowall_core"
crate-type = ["cdylib"]

[dependencies]
photowall-core = { path = "../photowall-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tracing = "0.1"
